Upgrade template to support Rails 7 (#30)
* WIP

* Remove YamlSyntax since it is broken with Ruby 3.1

* Improve npm script handling

* Clean up Gemfile entries

* Only emit scss files if --css=sass

* Update README for Rails 7

* Handle importmap-rails case

* More robust handling of layouts/application.html.erb

* Remove sass recommendation for now

* Ensure simpler package.json (no license, name)

* Switch to Node LTS

* Upgrade CI to Rails 7 and Ruby 3

* .env is not needed for CI

* Split security audits to separate CI job, rm cron

* Fix Node LTS install failure on CI

* No longer used

* Ensure app can be built and deployed on Linux

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,28 +4,21 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "<%= RUBY_VERSION %>"
 
 gem "active_type"
-<% if sprockets? -%>
-gem "autoprefixer-rails"
-<% end -%>
-gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
-<% if sprockets? -%>
-gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
-<% end -%>
-gem "pg"<%= gemfile_requirement("pg") %>
+<%= gemfile_entry "bcrypt", force: true -%>
+<%= gemfile_entry "bootsnap" -%>
+<%= gemfile_entry "cssbundling-rails" -%>
+<%= gemfile_entry "importmap-rails" -%>
+<%= gemfile_entry "jsbundling-rails" -%>
+<%= gemfile_entry "pg" -%>
 gem "pgcli-rails"
-gem "puma"<%= gemfile_requirement("puma") %>
+<%= gemfile_entry "puma" -%>
 gem "rack-canonical-host"
 gem "rails", "~> <%= Rails.version[/\d+\.\d+\.\d+/] %>"
-gem "redis"<%= gemfile_requirement("redis") %>
-<% if sprockets? -%>
-gem "sass-rails"
-<% end -%>
+<%= gemfile_entry "redis", force: true -%>
 gem "sidekiq"
-<% if gemfile_requirement("turbolinks") -%>
-gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
-<% end -%>
-gem "webpacker"
+<%= gemfile_entry "sprockets-rails" -%>
+<%= gemfile_entry "stimulus-rails" -%>
+<%= gemfile_entry "turbo-rails" -%>
 
 group :production do
   gem "postmark-rails"
@@ -35,14 +28,12 @@ group :development do
   gem "amazing_print"
   gem "annotate"
   gem "letter_opener"
-  gem "listen"<%= gemfile_requirement("listen") %>
-  gem "web-console"<%= gemfile_requirement("web-console") %>
+  <%= gemfile_entry "web-console" -%>
 end
 
 group :development, :test do
   gem "brakeman", require: false
   gem "bundler-audit", require: false
-  gem "byebug"
   gem "dotenv-rails"
   gem "launchy"
   gem "rubocop", require: false
@@ -52,10 +43,10 @@ group :development, :test do
 end
 
 group :test do
-  gem "capybara"<%= gemfile_requirement("capybara") %>
+  <%= gemfile_entry "capybara" -%>
   gem "minitest-ci", require: false
-  gem "selenium-webdriver"
+  <%= gemfile_entry "selenium-webdriver" -%>
   gem "shoulda-context"
   gem "shoulda-matchers"
-  gem "webdrivers"
+  <%= gemfile_entry "webdrivers" -%>
 end
