Add optional support for Vite

--- a/README.md.tt
+++ b/README.md.tt
@@ -32,10 +32,7 @@ Run the `bin/setup` script. This script will:
 ### Run it!
 
 1. Run `bin/rake` to run all tests and lint checks.
-2. Start the app with `yarn start` or run these processes individually:
-   - Rails: `bin/rails s -b 0.0.0.0`
-   - Webpack: `bin/webpack-dev-server`
-   - Sidekiq: `bin/sidekiq`
+2. Start the app with `yarn start`
 
 Access the app at <http://localhost:3000/>.
 
