--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <%# to include things like header, footer, and alerts that are common  %>
 <%# to most (but not all) views.                                       %>
 
-<%= render("shared/flash") %>
-
-<%= yield %>
+<main class="container">
+  <%= render("shared/flash") %>
+  <%= yield %>
+</main>
 
 <% parent_layout "base" %>
