Avoid using ENV[]

--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -32,7 +32,7 @@ commands:
     steps:
       - run:
           name: Set Up Database
-          command: bundle exec rake db:setup
+          command: bundle exec rake db:schema:load
 
 jobs:
   static_analysis:
