Enable rubocop rules for ActiveSupport

--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -8,6 +8,7 @@ AllCops:
   DisplayStyleGuide: true
   NewCops: enable
   TargetRubyVersion: <%= RUBY_VERSION[/\d+\.\d+/] %>
+  ActiveSupportExtensionsEnabled: true
   Exclude:
     - "bin/*"
     - db/schema.rb
