Update rubocop multi-line indentation rules

--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -16,6 +16,18 @@ AllCops:
     - "tmp/**/*"
     - "vendor/**/*"
 
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+
+Layout/FirstArrayElementLineBreak:
+  Enabled: true
+
+Layout/FirstHashElementLineBreak:
+  Enabled: true
+
+Layout/FirstMethodArgumentLineBreak:
+  Enabled: true
+
 Layout/HashAlignment:
   EnforcedColonStyle:
     - table
@@ -27,6 +39,18 @@ Layout/HashAlignment:
 Layout/LineLength:
   Exclude:
     - "config/initializers/content_security_policy.rb"
+
+Layout/MultilineArrayLineBreaks:
+  Enabled: true
+
+Layout/MultilineHashKeyLineBreaks:
+  Enabled: true
+
+Layout/MultilineMethodArgumentLineBreaks:
+  Enabled: true
+
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
 
 Layout/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: no_space
