Add capybara-lockstep for more reliable browser tests

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -48,6 +48,7 @@ end
 
 group :test do
   <%= gemfile_entry "capybara" -%>
+  gem "capybara-lockstep"
   gem "minitest-ci", require: false
   <%= gemfile_entry "selenium-webdriver" -%>
   gem "shoulda-context"
