--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -74,6 +74,9 @@ Metrics/MethodLength:
     - "db/migrate/*"
     - "test/**/*"
 
+Minitest/EmptyLineBeforeAssertionMethods:
+  Enabled: false
+
 Naming/MemoizedInstanceVariableName:
   EnforcedStyleForLeadingUnderscores: optional
 
