Add factory_bot_rails with default config

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -43,6 +43,7 @@ end
 group :development, :test do
   gem "byebug"
   gem "dotenv-rails"
+  gem "factory_bot_rails"
   gem "launchy"
   gem "syntax_suggest"
 end
