--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -31,6 +31,7 @@ group :development do
   gem "brakeman", require: false
   gem "bundler-audit", require: false
   gem "erb_lint", require: false
+  gem "foreman"
   gem "letter_opener"
   gem "rubocop", require: false
   gem "rubocop-capybara", require: false
