--- a/README.md.tt
+++ b/README.md.tt
@@ -10,12 +10,10 @@ This README describes the purpose of this repository and how to set up a develop
 
 This project requires:
 
-* Ruby <%= RUBY_VERSION %>, preferably managed using [rbenv][]
+* Ruby <%= RUBY_VERSION %>, preferably managed using [asdf][]
 * PostgreSQL must be installed and accepting connections
 
 On a Mac, you can obtain all of the above packages using [Homebrew][].
-
-If you need help setting up a Ruby development environment, check out this [Rails OS X Setup Guide](https://mattbrictson.com/rails-osx-setup-guide).
 
 ## Getting started
 
@@ -31,7 +29,7 @@ Run the `bin/setup` script. This script will:
 ### Run it!
 
 1. Run `bin/rake` to run all tests and lint checks.
-2. Start the app with `yarn start`
+2. Start the app with `foreman start -f Procfile.dev`
 
 Access the app at <http://localhost:3000/>.
 
