--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -33,6 +33,7 @@ group :development do
   gem "letter_opener"
   gem "rubocop", require: false
   gem "rubocop-capybara", require: false
+  gem "rubocop-factory_bot", require: false
   gem "rubocop-minitest", require: false
   gem "rubocop-performance", require: false
   gem "rubocop-rails", require: false
