Make SSL opt-out instead of opt-in
Before, SSL would be disabled in production by default, and you would
need to set RAILS_FORCE_SSL=true to turn in on.

Now, SSL is on by default, and you can turn if off with
RAILS_DISABLE_SSL=true.

This more closely aligns with the upcoming Rails 7.1, which will have
SSL enabled by default in the production config.

--- a/README.md.tt
+++ b/README.md.tt
@@ -62,7 +62,7 @@ Optionally:
 * `BASIC_AUTH_PASSWORD`
 * `BASIC_AUTH_USERNAME`
 * `POSTMARK_API_KEY`
-* `RAILS_FORCE_SSL`
+* `RAILS_DISABLE_SSL`
 * `RAILS_HOSTNAME`
 * `RAILS_LOG_TO_STDOUT`
 * `RAILS_MAX_THREADS`
