--- a/app/views/home/index.html.haml.tt
+++ b/app/views/home/index.html.haml.tt
@@ -1,6 +1,6 @@
 - provide(:title, "Home")
 %p
-  Find me in app/views/home/index.html.erb
+  Find me in app/views/home/index.html.haml
 - if File.read("package.json").match?(@hotwired/stimulus)
   %p
     Stimulus says,
